Bug 313308 - ctrl-alt-click to select the color on the current layer no longer works
Summary: ctrl-alt-click to select the color on the current layer no longer works
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-15 15:56 UTC by Tom Hall
Modified: 2013-01-21 09:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Hall 2013-01-15 15:56:43 UTC
Ctrl-Alt-Click should select a colour from the current layer (as detailed here: http://forum.kde.org/viewtopic.php?f=137&t=85939#p160758 ). It doesn't work.

Reproducible: Always

Steps to Reproduce:
1. With (e.g.) the paintbrush tool selected
2. Press and hold Ctrl+Alt
3. Click

Actual Results:  
Nothing

Expected Results:  
Colour picker picks colour from the selected layer.
Comment 1 Dmitry Kazakov 2013-01-21 09:00:25 UTC
Git commit 12d51a0d9ee9e63dcc9aa905b89cd18a2bbc0599 by Dmitry Kazakov.
Committed on 21/01/2013 at 09:59.
Pushed by dkazakov into branch 'master'.

Fixed color picking shortcuts

M  +40   -3    krita/ui/input/kis_alternate_invocation_action.cpp
M  +11   -0    krita/ui/input/kis_alternate_invocation_action.h
M  +2    -1    krita/ui/input/kis_input_manager.cpp

http://commits.kde.org/calligra/12d51a0d9ee9e63dcc9aa905b89cd18a2bbc0599