Fixed color picking shortcuts

BUG:313308